
* Added entry point for ``paste.translogger``
  (``egg:Paste#translogger``)

* Fixed some cases where long data (e.g., a file upload) would show up
  in the error report, creating a very very large report.  Also, put
  in a monkeypatch for the ``cgi`` module so that
  ``repr(uploaded_field)`` won't load the entire field into memory
  (from its temporary file location).

0.9.9
-----

* Fixed ``paste.response.HeaderDict`` ``get`` and ``setdefault``
  methods to be case insensitive

* Fix use of ``TestApp().post(params={'key': ['list of',
  'values']})`` as reported by Syver Enstad.

* ``paste.fileapp.DataApp`` is now directly usable (was previously
  only usable as an abstract base class).

0.9.8
-----

* Fixed ``wsgiwrappers.WSGIResponse.delete_cookie``. It also now takes
  optional path and domain arguments

* ``wsgiwrappers.WSGIResponse`` now handles generator/iterator content
  more cleanly, and properly encodes unicode content according to its
  specified charset

* Fixed ``wsgiwrappers.WSGIResponse`` mishandling multiple headers of
  the same name

* Added a Paste Deploy entry point for ``paste.auth.cookie``

* Moved Paste Deploy dependencies out of top-level modules and into
  Paste-Deploy-specific entry point functions.  This should make Paste
  more-or-less Paste Deploy independent.  ``paste.urlparser`` and
  ``paste.exceptions.errormiddleware`` still have some leftover bits.

* Added another redirector type to ``paste.recursive``,
  ``environ['paste.recursive.include_app_iter']`` which gives access
  to the original app_iter (useful for tranfsering unserialized data
  in internal WSGI requests, as in `WSGIRemote
  <http://svn.pythonpaste.org/Paste/WSGIRemote/trunk>`_

* Bug with ``wsgilib.catch_errors`` and app_iters with no ``close()``
  method.

* Long words in tracebacks weren't being wrapped correctly at all.
  Also, large data would cause the wrapping routine to give a
  recursion error.  Now large data is truncated (at 1000 characters),